create setup files- html & js

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|Montserrat&display=swap">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Poppins" rel="stylesheet">
+  <title>Liz Barnes | Portfolio</title>
 </head>
 <body>
   <div id="app"></div>
+  <nav>
+    <h1>liz barnes</h1>
+    <ul id="navLinks">
+      <li><a id="navToBio" class="navLink">Bio</a></li>
+      <li><a id="navToTechnologies" class="navLink">Technologies</a></li>
+      <li><a id="navToProjects" class="navLink">Projects</a></li>
+    </ul>
+  </nav>
+  <!-- End Navigation -->
+
+  <!-- Primary View -->
+  <div class="fullPage" id="bioPage">
+    <h2 class="intro">this is me</h2>
+    <p class="bio">I take on side projects like it's my job. I have experience creating graphics, logos, wireframes and websites- I'm all about the visuals. I am an athlete, avid adventurer, feminist and a lifelong learner. Coding gives me the opportunity to expressive my creativty, while meeting a challenge every step of the way. This is why I choose development!</p>
+  </div>
+  <div class="fullPage" id="technologiesPage" class="technologiesPage">
+    <h2 class="technology">tools</h2>
+    <ul class="tools">
+      <li>GitHub</li>
+      <li>Figma</li>
+      <li>Illustrator</li>
+      
+    </ul>
+  </div>
+  <div class="fullPage" id="projectsPage" class="projectsPage">
+    <h2 class="my-work">my work</h2>
+  </div>
+  <!-- End Primary View -->
+
+  <!-- Footer -->
+  <footer class="page-footer">
+    <ul class="contact-info">
+      <!-- <li><i class="fa fa-envelope-o" aria-hidden="true"></i></li> -->
+      <li>Email: embarnes95@gmail.com</li>
+      <!-- <li><a href="https://github.com/liz-barnes">GitHub: https://github.com/liz-barnes</a></li> -->
+      <li class="github-icon"><a href="https://github.com/liz-barnes"><i class="fa fa-github"></i></a></li>
+    </ul>
+  </footer>
 </body>
 </html>
