creating function to build project cards

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
   </div>
   <div class="fullPage" id="projectsPage" class="projectsPage">
     <h2 class="my-work">my work</h2>
+    <div id="projectsContainer"></div>
   </div>
   <!-- End Primary View -->
 
