build profile picture div with box shadow, style using flex box

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,18 @@
 
   <!-- Primary View -->
   <div class="fullPage" id="bioPage">
-    <h2 class="intro">this is me</h2>
-    <p class="bio">I take on side projects like it's my job. I have experience creating graphics, logos, wireframes and websites- I'm all about the visuals. I am an athlete, avid adventurer, feminist and a lifelong learner. Coding gives me the opportunity to expressive my creativty, while meeting a challenge every step of the way. This is why I choose development!</p>
+    <div class="bio-picture">
+      <div class="picture-background">
+        <div id="profile-picture">
+          <img src="./images/liz-profile.jpg" alt="Liz Barnes">
+        </div>
+      </div>
+
+    </div>
+    <div class="bio-intro">
+      <h2 class="intro">this is me</h2>
+      <p class="bio">I take on side projects like it's my job. I have experience creating graphics, logos, wireframes and websites- I'm all about the visuals. I am an athlete, avid adventurer, feminist and a lifelong learner. Coding gives me the opportunity to express my creativty, while meeting a challenge every step of the way. This is why I choose development!</p>
+    </div>
   </div>
   <div class="fullPage" id="technologiesPage" class="technologiesPage">
     <h2 class="technology">tools</h2>
