--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <title>Liz Barnes | Portfolio</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">
   <nav>
     <h1 id="navToHome" style="cursor: pointer;">liz barnes</h1>
     <ul id="navLinks">
@@ -48,6 +48,7 @@
     <h2 class="my-work">my work</h2>
     <div id="projectsContainer"></div>
   </div>
+</div>
   <!-- End Primary View -->
 
   <!-- Footer -->
