style projects view page

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|Montserrat&display=swap">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato|Poppins" rel="stylesheet">
   <title>Liz Barnes | Portfolio</title>
 </head>
 <body>
-  <div id="app">
   <nav>
     <h1 id="navToHome" style="cursor: pointer;">liz barnes</h1>
     <ul id="navLinks">
@@ -18,7 +18,7 @@
     </ul>
   </nav>
   <!-- End Navigation -->
-
+  <div id="app">
   <!-- Primary View -->
   <div class="fullPage" id="bioPage">
     <div class="bio-picture">
