try to fix image bug in deployed site- img not showing up

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
     </div>
   </div>
   <div class="fullPage" id="projectsPage" class="projectsPage">
-    <h2 class="my-work">my work</h2>
+    <h2 class="my-work">my blah</h2>
     <div id="projectsContainer"></div>
   </div>
 </div>
