update project cards with description

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,10 @@
       <h2 class="intro">this is me</h2>
       <p class="bio">I take on side projects like it's my job. I have experience creating graphics, logos, wireframes and websites- I'm all about the visuals. I am an athlete, avid adventurer, feminist and a lifelong learner. Coding gives me the opportunity to express my creativty, while meeting a challenge every step of the way. This is why I choose development!</p>
     </div>
+    <div class="nss">
+      <h3>my time at NSS</h3>
+      <p>Nashville Software School is an incredible non-profit, full-stack developer bootcamp. I collaborated with many of my classmates to work on group projects and build out our skillset. I learned My classmates and I stuggled, learned together.</p>
+    </div>
   </div>
   <div class="fullPage" id="technologiesPage" class="technologiesPage">
     <h2 class="technology">tools</h2>
@@ -41,6 +45,9 @@
         <li>Figma</li>
         <li>Bootstrap</li>
         <li>Flexbox</li>
+        <li>CSS Grid</li>
+        <li>Firebase</li>
+        <li>React</li>
       </ul>
     </div>
   </div>
