--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     </div>
     <div class="nss">
       <h3>my time at NSS</h3>
-      <p></p>
+      <p>Nashville Software School is an incredible non-profit, full-stack developer bootcamp. I collaborated with many of my classmates to work on group projects and build out our skillset. I learned My classmates and I stuggled, learned together.</p>
     </div>
   </div>
   <div class="fullPage" id="technologiesPage" class="technologiesPage">
