add tech icons and nss blurb

--- a/src/index.html
+++ b/src/index.html
@@ -34,13 +34,25 @@
     </div>
     <div class="nss">
       <h3>my time at NSS</h3>
-      <p></p>
+      <p>During my time at Nashville Software School, I planned and implemented projects, individually and collaboratively with classmates, from start to finish. I learned how to manage my time, when to ask for help, how to be a team player, and how to work with others’ code. It has been a great experience and I am excited to continue my software development journey.</p>
     </div>
   </div>
   <div class="fullPage" id="technologiesPage" class="technologiesPage">
     <h2 class="technology">tools</h2>
     <div id="techContainer">
-      <ul class="tools">
+      <div class="techIcons">
+        <i class="fab fa-react"></i>
+        <i class="fab fa-html5"></i>
+        <i class="fab fa-css3-alt"></i>
+        <i class="fab fa-js"></i>
+        <i class="fab fa-node"></i>
+        <!-- <i class="fab"><img src="../src/images/iconfinder_firebase_4691533.png" alt="firebase"></i> -->
+        <i class="fab fa-sass"></i>
+        <i class="fab fa-bootstrap"></i>
+        <i class="fab fa-git"></i>
+        <i class="fab fa-github-square"></i>
+      </div>
+      <!-- <ul class="tools">
         <li>GitHub</li>
         <li>Figma</li>
         <li>Bootstrap</li>
@@ -48,7 +60,7 @@
         <li>CSS Grid</li>
         <li>Firebase</li>
         <li>React</li>
-      </ul>
+      </ul> -->
     </div>
   </div>
   <div class="fullPage" id="projectsPage" class="projectsPage">
